# blink

./: .gitignore  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  audio.c  audio.h  blink.c  blink.h  blink_example_main.c  bsp_kaluga_disp_audio_example.c  button.c  common.h  disp_example.c  idf_component.yml  main.c
main/audio/: audio.c  audio.h
main/blink/: blink.c
main/button/: button.c  button.h
main/display/: assets.c  assets.h  background.c  background2.c  disp_example.c  disp_example.h  my_disp.c  my_disp.h  my_image.c  my_image.h  plane.c  plane_bum.c  plane_down.c  plane_fall.c  plane_up.c  renderer.c  renderer.h  tube_bottom.c  tube_bottom2.c  tube_top.c  tubes.c  tubes.h  tubes_image.h
main/game_loop/: game_loop.c  game_loop.h
