idf_component_register(SRCS "main.c"
                        #"display/tube_top.c" "display/tube_bottom.c" "display/tubes.c"
                            "display/renderer.c" "display/tube_top.c" "display/tube_bottom.c" "display/assets.c"
                            "game_loop/game_loop.c"
                            "button/button.c" "blink/blink.c"
                            "audio/audio.c"
                    INCLUDE_DIRS ".")
