idf_component_register(SRCS "main.c"
                        #"display/tube_top.c" "display/tube_bottom.c" "display/tubes.c"
                            "display/renderer.c" "display/tube_top.c" "display/tube_bottom.c" "display/background.c" "display/plane.c" "display/plane_up.c" "display/plane_down.c" "display/assets.c" "display/background2.c" "display/tube_bottom2.c" "display/plane_bum.c" "display/plane_fall.c"
                            "game_loop/game_loop.c"
                            "button/button.c" "blink/blink.c"
                            "audio/audio.c"
                    INCLUDE_DIRS ".")
